[package]
name = "nick-name"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "rust/lib.rs"

[dependencies]
thiserror = "1.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "winnt",
    "winbase",
    "l2cmn",
    "sysinfoapi",
    "winsock2",
    "iptypes",
] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(any(target_os = "macos", target_os = "ios", target_os = "linux"))'.dependencies]
libc = "0.2"
