[package]
name = "nick-name"
version = "0.1.0"
authors = ["oligami <nziq53@gmail.com>"]
license = "MIT/Apache-2.0/BSD-3-Clause"
repository = "https://github.com/nziq53/nickname"
homepage = "https://github.com/nziq53/nickname"
edition = "2021"
description = """
A Cross-Platform Rust user define device-name(nick-name) get set library.
"""
keywords = ["devicename", "nickname"]
categories = ["hardware-support"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "rust/lib.rs"

[dependencies]
thiserror = "1.0"
cfg-if = "1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "winnt",
    "winbase",
    "l2cmn",
    "sysinfoapi",
    "winsock2",
    "iptypes",
] }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
objc = { version = "0.4.1", package = "objc2" }

[target.'cfg(any(unix, target_os = "redox", target_os = "macos", target_os = "wasi"))'.dependencies]
libc = "0.2"
