[package]
name = "examples"
version = "0.1.0"
authors = ["oligami <nziq53@gmail.com>"]
edition = "2021"
publish = false

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
libc = "0.2"
log = "0.4"
ndk = { version = "0.8", features = ["api-level-31"] }
ndk-context = "0.1.1"
android_logger = "0.13"
android-activity = { version = "0.5", features = ["native-activity"] }

# this library
nick-name = { path = "../../" }

[lib]
crate-type = ["cdylib"]

[package.metadata.android.sdk]
min_sdk_version = 24
target_sdk_version = 32
# https://github.com/rust-mobile/android-activity/issues/144
